chores: logo changed and fixing upcoming downdrop overlap issue

--- a/client/src/components/common/Navbar/Navbar.module.css
+++ b/client/src/components/common/Navbar/Navbar.module.css
@@ -39,8 +39,10 @@
 
 /* Logo */
 .logo {
+  height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: var(--space-3);
   text-decoration: none;
 }
@@ -51,6 +53,15 @@
   color: var(--text-primary);
   letter-spacing: -0.02em;
   white-space: nowrap;
+  margin: auto;
+  height: 100%;
+}
+
+.logo img {
+  width: 120px;
+  object-fit: cover;
+  height: auto;
+  filter: invert(1);
 }
 
 .logoText span {
